public enum orderType {
    BUY,
    SELL
}
